syntax = "proto3";

package userManagementPackage;

service UserManagement{
    rpc add(User) returns (UserDTO);
    rpc read(Identifier) returns (UserDTO);
    rpc list(NoParams) returns (Users);
    rpc update(User) returns (UserDTO);
    rpc remove(Identifier) returns (Boolean);
}


message NoParams{}

message Users{
 repeated UserDTO value = 1;
}

message User{
    int32 id = 1;
    string fullName = 2;
    string email = 3;
    string pwd = 4;
}

message UserDTO{
    int32 id = 1;
    string fullName = 2;
    string email = 3;
}

message Boolean {
    bool value = 1;
}


message Identifier{
    int32 value=1;
}
